[gd_scene load_steps=5 format=3 uid="uid://w26oddm8keux"]

[ext_resource type="Script" path="res://scripts/trial_finish.gd" id="1_q0kvc"]
[ext_resource type="PackedScene" uid="uid://dl7f7sjngjih4" path="res://scenes/level_complete.tscn" id="2_qswjw"]
[ext_resource type="AudioStream" uid="uid://bkxaotnalrnr1" path="res://music/Ascension_VictoryV1.mp3" id="3_cdvav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_basam"]
size = Vector2(208, 128)

[node name="Trial_Finish" type="Area2D"]
position = Vector2(10048, -1536)
script = ExtResource("1_q0kvc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(88, 40)
shape = SubResource("RectangleShape2D_basam")

[node name="level_complete" parent="." instance=ExtResource("2_qswjw")]
unique_name_in_owner = true
visible = false

[node name="victory_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_cdvav")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
